--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Twenty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <head>
-	<title>Twenty by HTML5 UP</title>
+	<title>Justin Haney | Web Developer | Mobile, AL</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,9 +23,9 @@
 					<li class="submenu">
 						<a href="#">Want Faster Search?</a>
 						<ul>
-							<li><a href="left-sidebar.html">About Me</a></li>
-							<li><a href="right-sidebar.html">Portfolio</a></li>
-							<li><a href="no-sidebar.html">Resume</a></li>
+							<li><a href="#main">About Me</a></li>
+							<li><a href="#portfolio">Portfolio</a></li>
+							<li><a href="resume.html">Resume</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</li>
@@ -39,11 +35,6 @@
 		</header>
 		<!-- Banner -->
 		<section id="banner">
-			<!--".inner" is set up as an inline-block so it automatically expands
-						in both directions to fit whatever's inside it. This means it won't
-						automatically wrap lines, so be sure to use line breaks where
-						appropriate (<br />).
-					-->
 			<div class="inner">
 				<header>
 					<h2>JUSTIN</h2>
@@ -167,7 +158,7 @@
 			</section>
 
 			<!-- Three -->
-			<section class="wrapper style3 container special">
+			<section id="portfolio" class="wrapper style3 container special">
 
 				<header class="major">
 					<h2>Next look at this <strong>cool stuff</strong></h2>
@@ -222,7 +213,8 @@
 					<div class="col-6 col-12-narrower">
 
 						<section>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="http://invictus-matrix.herokuapp.com" target="_blank" class="image featured"><img
+									src="images/pic04.jpg" alt="" /></a>
 							<header>
 								<h3>Matrix Management</h3>
 							</header>
