--- a/Mockup/index.html
+++ b/Mockup/index.html
@@ -26,6 +26,7 @@
 							<li><a href="#main">About Me</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
 							<li><a href="resume.html">Resume</a></li>
+							<li><a href="interior.html">Blog</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</li>
